force-app/main/default/objects/SYS_Integration_Metadata__c/SYS_Integration_Metadata__c.object-meta.xml
<CustomObject>
    <label>Integration Metadata</label>
    <nameField>
        <displayFormat>IM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Metadata</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>