force-app/main/default/objects/SYS_Integration_Metadata__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integration Metadata</relationshipLabel>
    <relationshipName>Integration_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>