force-app/main/default/objects/SYS_Integration_Metadata__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integration Metadata</relationshipLabel>
    <relationshipName>Integration_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>